--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -33,6 +33,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: print tree
+        run: tree
+
       - name: Copy Images
         uses: andstor/copycat-action@v3.2.4
         with:
@@ -53,6 +57,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+          
+      - name: print tree
+        run: tree
+        
       - name: Copy Markdowns
         uses: andstor/copycat-action@v3.2.4
         with:
