--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -46,7 +46,7 @@ jobs:
           personal_token: ${{ secrets.ACTION_TOKEN  }}
           src_branch: main
           dst_branch: mkdocs
-          src_path: /notes/image/.
+          src_path: notes/image/.
           dst_path: /static/images/
           dst_owner: ${{ env.REPO_OWNER }}
           dst_repo_name: ${{ github.event.repository.name }}
@@ -63,7 +63,7 @@ jobs:
           
       - name: force update submodule
         run: git submodule update --remote
-        
+
       - name: print tree
         run: tree
         
@@ -73,7 +73,7 @@ jobs:
           personal_token: ${{ secrets.ACTION_TOKEN  }}
           src_branch: main
           dst_branch: mkdocs
-          src_path: /notes/.
+          src_path: notes/.
           dst_path: /docs/
           dst_owner: ${{ env.REPO_OWNER }}
           dst_repo_name: ${{ github.event.repository.name }}
