--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -30,9 +30,9 @@ jobs:
     steps:
           
       # Checks-out custom github action
-      - uses: actions/checkout@v2
-        with:
-          repo: https://github.com/hannesdelbeke/copycat-action-2
+      # - uses: actions/checkout@v2
+      #   with:
+      #     repo: https://github.com/hannesdelbeke/copycat-action-2
       
       # - name: force update submodule
       #   run: git submodule update --remote
@@ -41,7 +41,7 @@ jobs:
         run: tree
 
       - name: Copy Images (custom)
-        uses: ./
+        uses: hannesdelbeke/copycat-action-2
         with:
           personal_token: ${{ secrets.ACTION_TOKEN  }}
           src_branch: main
@@ -58,9 +58,9 @@ jobs:
 
     steps:
       # Checks-out custom github action
-      - uses: actions/checkout@v2
-        with:
-          repo: https://github.com/hannesdelbeke/copycat-action-2
+      # - uses: actions/checkout@v2
+      #   with:
+      #     repo: https://github.com/hannesdelbeke/copycat-action-2
           
       # - name: force update submodule
       #   run: git submodule update --remote
@@ -69,7 +69,7 @@ jobs:
         run: tree
         
       - name: Copy Markdowns
-        uses: ./
+        uses: hannesdelbeke/copycat-action-2
         with:
           personal_token: ${{ secrets.ACTION_TOKEN  }}
           src_branch: main
