--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -12,9 +12,6 @@ on:
   workflow_dispatch:
 
 jobs:
-
-  # TODO run janitor on markdown input
-
   copy-content-to-mkdocs-branch:
     runs-on: ubuntu-latest
     steps:
@@ -50,6 +47,26 @@ jobs:
             mkdir -p dst_repo/docs/
             mv temp_submodule/* dst_repo/docs/
 
+      # run janitor on markdown input
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - uses: actions/checkout@v2
+        with:
+          repository: 'hannesdelbeke/note-link-janitor'  # use fork to support subfolders
+          ref: stable
+          path: 'note-link-janitor'
+      - name: install yarn in janitor workspace
+        run: |
+            cd ${{ github.workspace }}/note-link-janitor
+            yarn install
+            yarn run build
+      - name: Run Note Link Janitor
+        run: ${{ github.workspace }}/note-link-janitor/dist/index.js ${{ github.workspace }}/dst_repo/docs
+        # restore path
+      # - run: cd .. #${{ github.workspace }}/${{ github.event.repository.name }}
+
+      
       # # push repo
       # - name: push updates to mkdocs branch
       #   # uses: ad-m/github-push-action@master
