--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,7 @@ extra_javascript:
     - https://polyfill.io/v3/polyfill.min.js?features=es6         # support older browsers? A js polyfill library for es6 API such as findIndex, Array.from, etc.
     - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js # more LaTeX support
   #  - assets/js/tooltipster.bundle.js                            # todo this doesnt work yet?
+    - assets/js/backlinks.js
 extra_css:
     - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
 #    - assets/css/template/blog.css                       # changes layout bottom of post
@@ -135,6 +136,7 @@ extra_css:
     - assets/css/custom_attributes.css                  # hashtag css etc
     - assets/css/customization.css
     - assets/css/read-the-docs.css
+    - assets/css/backlinks.css
 extra:                                                  # data passed to templates
     generator: false                                    # if True, displays Made with Material for MkDocs at bottom of page
   #  SEO: assets/meta/SEO.png
